DRAKEN-2953: Fix API documentation issues
