# src/main/java/se/sundsvall/jsonschema/api/model/UiSchema.java
@@ -15,16 +15,18 @@ public class UiSchema {
 
 	@Schema(description = "The UI schema", example = """
 		{
-		  "ui:title": "Title",
-		  "ui:description": "Description",
-		  "ui:submitButtonOptions": {
-		    "props": {
-		      "disabled": false,
-		      "className": "btn btn-info",
+		    "firstName": {
+		        "ui:widget": "text",
+		        "ui:placeholder": "Enter first name"
 		    },
-		      "norender": false,
-		      "submitText": "Submit"
-		    }
+		    "lastName": {
+		        "ui:widget": "text",
+		        "ui:placeholder": "Enter last name"
+		    },
+		    "ui:order": [
+		        "firstName",
+		        "lastName"
+		    ]
 		}
 		""", accessMode = READ_ONLY)
 	private JsonNode value;
